--- a/paper/index.html
+++ b/paper/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="The description of the site.">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.445ee124.css" as="style"><link rel="preload" href="/assets/js/app.a167b6b7.js" as="script"><link rel="preload" href="/assets/js/2.c313953c.js" as="script"><link rel="preload" href="/assets/js/9.269f94be.js" as="script"><link rel="prefetch" href="/assets/js/10.2a03f7ae.js"><link rel="prefetch" href="/assets/js/11.e7bf421f.js"><link rel="prefetch" href="/assets/js/12.9657663b.js"><link rel="prefetch" href="/assets/js/13.8ea92bd0.js"><link rel="prefetch" href="/assets/js/14.df80b67c.js"><link rel="prefetch" href="/assets/js/15.07df855a.js"><link rel="prefetch" href="/assets/js/16.7867826f.js"><link rel="prefetch" href="/assets/js/17.29da4c15.js"><link rel="prefetch" href="/assets/js/3.aa6ca531.js"><link rel="prefetch" href="/assets/js/4.f48a7e5d.js"><link rel="prefetch" href="/assets/js/5.ab0f2fb7.js"><link rel="prefetch" href="/assets/js/6.da35c38b.js"><link rel="prefetch" href="/assets/js/7.449b2c51.js"><link rel="prefetch" href="/assets/js/8.130eedaf.js">
+    <link rel="preload" href="/assets/css/0.styles.445ee124.css" as="style"><link rel="preload" href="/assets/js/app.1c0435e9.js" as="script"><link rel="preload" href="/assets/js/2.c313953c.js" as="script"><link rel="preload" href="/assets/js/9.87c419bc.js" as="script"><link rel="prefetch" href="/assets/js/10.c64fd391.js"><link rel="prefetch" href="/assets/js/11.e7bf421f.js"><link rel="prefetch" href="/assets/js/12.9e1f526e.js"><link rel="prefetch" href="/assets/js/13.12519dec.js"><link rel="prefetch" href="/assets/js/14.131f1ab3.js"><link rel="prefetch" href="/assets/js/15.4049dbd8.js"><link rel="prefetch" href="/assets/js/16.40a46b31.js"><link rel="prefetch" href="/assets/js/17.29da4c15.js"><link rel="prefetch" href="/assets/js/3.aa6ca531.js"><link rel="prefetch" href="/assets/js/4.f48a7e5d.js"><link rel="prefetch" href="/assets/js/5.ab0f2fb7.js"><link rel="prefetch" href="/assets/js/6.da35c38b.js"><link rel="prefetch" href="/assets/js/7.449b2c51.js"><link rel="prefetch" href="/assets/js/8.532f8325.js">
     <link rel="stylesheet" href="/assets/css/0.styles.445ee124.css">
   </head>
   <body>
@@ -32,26 +32,26 @@ Xiulong Liu, Wei Jiang, <strong>Sheng Chen*</strong>, Xin Xie, Hankai Liu, Qixua
 IEEE Internet of Things Journal (IOTJ), 2023.<strong>（中科院一区）</strong></p></li> <li><p><strong>MiddleCache: Accelerating TCP based In-memory Key-value Stores using eBPF.</strong><br>
 Yiren Pang, <strong>Sheng Chen</strong>, Wenxin Li, Hao Liu, Yulong Li, Xin He, Song Zhang, Zewei Guan, Lide Suo and Liu Yuan.<br>
 In Proc. of IEEE ICPADS, 2023.<strong>（CCF-C 会议）</strong></p></li> <li><p><strong>Low-cost crossed probing path planning for network failure localization.</strong><br>
-Hongyun Gao, Laiping Zhao, Sheng Chen and Keqiu Li.
-World Wide Web, 2023.<strong>（CCF-B 期刊）</strong></p></li> <li><p><strong>An online dynamic pricing framework for resource allocation in edge computing.</strong><br> <strong>Sheng Chen</strong>, Baochao Chen, Xiaoyi Tao, Xin Xie and Keqiu Li.
-Journal of Systems Architecture (JSA), 2022.<strong>（CCF-B 期刊）</strong></p></li> <li><p><strong>Joint Service Placement for Maximizing the Social Welfare in Edge Federation.</strong><br> <strong>Sheng Chen</strong>, Baochao Chen, Junjie Xie, Xiulong Liu, Deke Guo and Keqiu Li.
-In Proc. of IEEE/ACM IWQoS, 2021.<strong>（CCF-B 会议）</strong></p></li> <li><p><strong>SILoc: A Speed Inconsistency-Immune Approach to Mobile RFID Robot Localization.</strong><br> <strong>Sheng Chen</strong>, Baochao Chen, Junjie Xie, Xiulong Liu, Deke Guo and Keqiu Li.
+Hongyun Gao, Laiping Zhao, Sheng Chen and Keqiu Li.<br>
+World Wide Web, 2023.<strong>（CCF-B 期刊）</strong></p></li> <li><p><strong>An online dynamic pricing framework for resource allocation in edge computing.</strong><br> <strong>Sheng Chen</strong>, Baochao Chen, Xiaoyi Tao, Xin Xie and Keqiu Li.<br>
+Journal of Systems Architecture (JSA), 2022.<strong>（CCF-B 期刊）</strong></p></li> <li><p><strong>Joint Service Placement for Maximizing the Social Welfare in Edge Federation.</strong><br> <strong>Sheng Chen</strong>, Baochao Chen, Junjie Xie, Xiulong Liu, Deke Guo and Keqiu Li.<br>
+In Proc. of IEEE/ACM IWQoS, 2021.<strong>（CCF-B 会议）</strong></p></li> <li><p><strong>SILoc: A Speed Inconsistency-Immune Approach to Mobile RFID Robot Localization.</strong><br> <strong>Sheng Chen</strong>, Baochao Chen, Junjie Xie, Xiulong Liu, Deke Guo and Keqiu Li.<br>
 In Proc. of IEEE INFOCOM, 2021.<strong>（CCF-A 会议）</strong></p></li> <li><p><strong>Hash Learning With Variable Quantization for Large-Scale Retrieval.</strong><br>
-Yuan Cao, <strong>Sheng Chen</strong>, Heng Qi, Zhiyang Li and Chao Liu.
-IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), 2021.<strong>（中科院一区）</strong></p></li> <li><p><strong>Load Balance Awared Data Sharing Systems In Heterogeneous Edge Environment.</strong><br> <strong>Sheng Chen</strong>, Zheng Chen, Siyuan Gu, Baochao Chen, Junjie Xie and Deke Guo.
+Yuan Cao, <strong>Sheng Chen</strong>, Heng Qi, Zhiyang Li and Chao Liu.<br>
+IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), 2021.<strong>（中科院一区）</strong></p></li> <li><p><strong>Load Balance Awared Data Sharing Systems In Heterogeneous Edge Environment.</strong><br> <strong>Sheng Chen</strong>, Zheng Chen, Siyuan Gu, Baochao Chen, Junjie Xie and Deke Guo.<br>
 In Proc. of IEEE ICPADS, 2020.<strong>（CCF-C 会议）</strong></p></li> <li><p><strong>Efficient Online Scheduling for Coflow-Aware Machine Learning Clusters.</strong><br>
-Wenxin Li, <strong>Sheng Chen</strong>, Keqiu Li, Heng Qi, Renhai Xu and Song Zhang.
+Wenxin Li, <strong>Sheng Chen</strong>, Keqiu Li, Heng Qi, Renhai Xu and Song Zhang.<br>
 IEEE Transactions on Cloud Computing (TCC), 2020.<strong>（中科院一区）</strong></p></li> <li><p><strong>Efficient Coflow Transmission for Distributed Stream Processing.</strong><br>
-Wenxin Li, Xu Yuan, Wenyu Qu, Heng Qi, Xiaobo Zhou, <strong>Sheng Chen</strong> and Renhai Xu.
+Wenxin Li, Xu Yuan, Wenyu Qu, Heng Qi, Xiaobo Zhou, <strong>Sheng Chen</strong> and Renhai Xu.<br>
 In Proc. of IEEE INFOCOM, 2020.<strong>（CCF-A 会议）</strong></p></li> <li><p><strong>Fast and Accurate Detection of Unknown Tags for RFID Systems - Hash Collisions are Desirable.</strong><br>
-Xiulong Liu, <strong>Sheng Chen</strong>, Jia Liu, Wenyu Qu, Fengjun Xiao, Alex X. Liu, Jiaonong Cao and Jiangchuan Liu.
+Xiulong Liu, <strong>Sheng Chen</strong>, Jia Liu, Wenyu Qu, Fengjun Xiao, Alex X. Liu, Jiaonong Cao and Jiangchuan Liu.<br>
 IEEE/ACM Transactions on Networking (TON), 2020.<strong>（CCF-A 期刊）</strong></p></li> <li><p><strong>Bringing the Functionality of Tag Sampling to Reality for COTS RFID Systems.</strong><br>
-Qiwen Hu, Jiuwu Zhang, <strong>Sheng Chen</strong>, Xin Xie, Xiulong Liu, Keqiu Li and Jie Wu.
+Qiwen Hu, Jiuwu Zhang, <strong>Sheng Chen</strong>, Xin Xie, Xiulong Liu, Keqiu Li and Jie Wu.<br>
 IEEE Communications Letters, 2019.<strong>（中科院三区）</strong></p></li> <li><p><strong>Improved Flow Awareness by Spatio-Temporal Collaborative Sampling in Software Defined Networks.</strong><br>
-He Cai, Jun Deng, Sheng Chen, Xiaofei Wang, Sangheon Pack and Zhu Han.
+He Cai, Jun Deng, Sheng Chen, Xiaofei Wang, Sangheon Pack and Zhu Han.<br>
 In Proc. of IEEE ICC, 2019.<strong>（CCF-C 会议）</strong></p></li> <li><p><strong>More Requests, Less Cost: Uncertain Inter-Datacenter Traffic Transmission with Multi-Tier Pricing.</strong><br>
-Xiaodong Dong, Sheng Chen, Laiping Zhao, Xiaobo Zhou, Heng Qi and Keqiu Li.
+Xiaodong Dong, Sheng Chen, Laiping Zhao, Xiaobo Zhou, Heng Qi and Keqiu Li.<br>
 Journal of Computer Science and Technology (JCST), 2018.<strong>（CCF-B 期刊）</strong></p></li></ul></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.a167b6b7.js" defer></script><script src="/assets/js/2.c313953c.js" defer></script><script src="/assets/js/9.269f94be.js" defer></script>
+    <script src="/assets/js/app.1c0435e9.js" defer></script><script src="/assets/js/2.c313953c.js" defer></script><script src="/assets/js/9.87c419bc.js" defer></script>
   </body>
 </html>
