--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="The description of the site.">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.445ee124.css" as="style"><link rel="preload" href="/assets/js/app.1c0435e9.js" as="script"><link rel="preload" href="/assets/js/11.e7bf421f.js" as="script"><link rel="prefetch" href="/assets/js/10.c64fd391.js"><link rel="prefetch" href="/assets/js/12.9e1f526e.js"><link rel="prefetch" href="/assets/js/13.12519dec.js"><link rel="prefetch" href="/assets/js/14.131f1ab3.js"><link rel="prefetch" href="/assets/js/15.4049dbd8.js"><link rel="prefetch" href="/assets/js/16.40a46b31.js"><link rel="prefetch" href="/assets/js/17.29da4c15.js"><link rel="prefetch" href="/assets/js/2.c313953c.js"><link rel="prefetch" href="/assets/js/3.aa6ca531.js"><link rel="prefetch" href="/assets/js/4.f48a7e5d.js"><link rel="prefetch" href="/assets/js/5.ab0f2fb7.js"><link rel="prefetch" href="/assets/js/6.da35c38b.js"><link rel="prefetch" href="/assets/js/7.449b2c51.js"><link rel="prefetch" href="/assets/js/8.532f8325.js"><link rel="prefetch" href="/assets/js/9.87c419bc.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.445ee124.css">
+    <link rel="preload" href="/assets/css/0.styles.034477bd.css" as="style"><link rel="preload" href="/assets/js/app.c6523a2b.js" as="script"><link rel="preload" href="/assets/js/11.e7bf421f.js" as="script"><link rel="prefetch" href="/assets/js/10.71ee3629.js"><link rel="prefetch" href="/assets/js/12.60ac0ef1.js"><link rel="prefetch" href="/assets/js/13.8ea92bd0.js"><link rel="prefetch" href="/assets/js/14.df80b67c.js"><link rel="prefetch" href="/assets/js/15.07df855a.js"><link rel="prefetch" href="/assets/js/16.80cd7f3a.js"><link rel="prefetch" href="/assets/js/17.29da4c15.js"><link rel="prefetch" href="/assets/js/2.c313953c.js"><link rel="prefetch" href="/assets/js/3.344cdd58.js"><link rel="prefetch" href="/assets/js/4.afa98f45.js"><link rel="prefetch" href="/assets/js/5.33d020d5.js"><link rel="prefetch" href="/assets/js/6.da35c38b.js"><link rel="prefetch" href="/assets/js/7.449b2c51.js"><link rel="prefetch" href="/assets/js/8.43215552.js"><link rel="prefetch" href="/assets/js/9.ff5220ef.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.034477bd.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.1c0435e9.js" defer></script><script src="/assets/js/11.e7bf421f.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.c6523a2b.js" defer></script><script src="/assets/js/11.e7bf421f.js" defer></script>
   </body>
 </html>
