--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="The description of the site.">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.dee38e43.css" as="style"><link rel="preload" href="/assets/js/app.f98d440e.js" as="script"><link rel="preload" href="/assets/js/11.e7bf421f.js" as="script"><link rel="prefetch" href="/assets/js/10.c64fd391.js"><link rel="prefetch" href="/assets/js/12.b0026ba3.js"><link rel="prefetch" href="/assets/js/13.a0a4f94a.js"><link rel="prefetch" href="/assets/js/14.50346f58.js"><link rel="prefetch" href="/assets/js/15.f277638e.js"><link rel="prefetch" href="/assets/js/16.40a46b31.js"><link rel="prefetch" href="/assets/js/17.29da4c15.js"><link rel="prefetch" href="/assets/js/2.c313953c.js"><link rel="prefetch" href="/assets/js/3.344cdd58.js"><link rel="prefetch" href="/assets/js/4.afa98f45.js"><link rel="prefetch" href="/assets/js/5.33d020d5.js"><link rel="prefetch" href="/assets/js/6.da35c38b.js"><link rel="prefetch" href="/assets/js/7.449b2c51.js"><link rel="prefetch" href="/assets/js/8.a95a997a.js"><link rel="prefetch" href="/assets/js/9.e60f25fe.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.dee38e43.css">
+    <link rel="preload" href="/assets/css/0.styles.2271a58c.css" as="style"><link rel="preload" href="/assets/js/app.f3a67b20.js" as="script"><link rel="preload" href="/assets/js/11.e7bf421f.js" as="script"><link rel="prefetch" href="/assets/js/10.d4c28d7c.js"><link rel="prefetch" href="/assets/js/12.2baaa0cb.js"><link rel="prefetch" href="/assets/js/13.19fbb22b.js"><link rel="prefetch" href="/assets/js/14.131f1ab3.js"><link rel="prefetch" href="/assets/js/15.e4771a73.js"><link rel="prefetch" href="/assets/js/16.80cd7f3a.js"><link rel="prefetch" href="/assets/js/17.29da4c15.js"><link rel="prefetch" href="/assets/js/2.c313953c.js"><link rel="prefetch" href="/assets/js/3.aa6ca531.js"><link rel="prefetch" href="/assets/js/4.82bb5588.js"><link rel="prefetch" href="/assets/js/5.33d020d5.js"><link rel="prefetch" href="/assets/js/6.da35c38b.js"><link rel="prefetch" href="/assets/js/7.449b2c51.js"><link rel="prefetch" href="/assets/js/8.532f8325.js"><link rel="prefetch" href="/assets/js/9.765c31f2.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.2271a58c.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.f98d440e.js" defer></script><script src="/assets/js/11.e7bf421f.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.f3a67b20.js" defer></script><script src="/assets/js/11.e7bf421f.js" defer></script>
   </body>
 </html>
